# kha

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  theory.md
assets/: benchmark_opus48.json  duty_benchmark_opus48.json
examples/import_duty/: README.md  assistant.py  compare.html  engine.py  parse_tariff.py  proof_certificate.json  prove.py  serve.py  spec.py  ui.html
examples/import_duty/data/: SOURCE.md  hsn_bcd.json
examples/income_tax/: README.md  assistant.py  compare.html  engine.py  proof_certificate.json  prove.py  serve.py  spec.py  ui.html
kha/: __init__.py  assistant.py  env.py  llm.py  prove.py  spec.py  verify.py
